# MyntEyeVision

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  recorder.cpp
scripts/: analysis.py
